--- a/res/layout/createnewtask.xml
+++ b/res/layout/createnewtask.xml
@@ -1,153 +1,209 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:isScrollContainer="true"
+    >
 
-    <AbsoluteLayout
-        android:id="@+id/cnt_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.00" >
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_column="0"
-            android:layout_gravity="bottom|right"
-            android:layout_row="0"
-            android:text="@string/cntV_enterTaskName"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <EditText
-            android:id="@+id/cnt_taskName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_x="2dp"
-            android:layout_y="18dp" >
-
-            <requestFocus />
-        </EditText>
-    </AbsoluteLayout>
-
-    <View
-        android:id="@+id/line1"
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:background="#33b5e5" />
-
-    <ToggleButton
-        android:id="@+id/cnt_locationButton"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:text="@string/cntV_taskLocation" />
-
-    <View
-        android:id="@+id/line2"
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:background="#33b5e5" />
-
-    <AbsoluteLayout
-        android:id="@+id/cnt_absolute_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cntV_taskDescription" />
-
-        <EditText
-            android:id="@+id/cnt_taskDescription"
-            android:layout_width="match_parent"
-            android:layout_height="104dp"
-            android:layout_y="16dp"
-            android:inputType="textMultiLine" />
-    </AbsoluteLayout>
-
-    <View
-        android:id="@+id/line3"
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:background="#33b5e5" />
-
-    <CheckBox
-        android:id="@+id/cnt_checkBox_specify_days"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/cntV_taskDefineTimeRange" />
-
-    <View
-        android:id="@+id/line4"
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:background="#33b5e5" />
-
-    <AbsoluteLayout
-        android:id="@+id/cnt_asboluteLayout_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="0"
-            android:layout_weight="0.00"
-            android:text="@string/cntV_taskUrgency" />
-
-        <RatingBar
-            android:id="@+id/cnt_setUrgency"
-            android:layout_width="145dp"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_gravity="bottom|right"
-            android:layout_row="0"
-            android:layout_weight="0.00"
-            android:layout_x="144dp" />
-    </AbsoluteLayout>
-
-    <View
-        android:id="@+id/line5"
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:background="#33b5e5" />
-
-    <Button
-        android:id="@+id/cnt_specifyModeButton"
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:text="@string/cntV_taskspecifyReminderMode" />
-
-    <View
-        android:id="@+id/line6"
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:background="#33b5e5" />
-
-    <GridLayout
-        android:id="@+id/cnt_grid_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <Button
-            android:id="@+id/cnt_saveButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.00"
-            android:text="@string/save" />
-
-        <Button
-            android:id="@+id/cnt_cancelButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.00" 
-            android:text="@string/cancel" />
-
-    </GridLayout>
-
-</LinearLayout>
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical" >
+	
+	    <AbsoluteLayout
+	        android:id="@+id/cnt_1"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="0.00" >
+	
+	        <TextView
+	            android:id="@+id/textView1"
+	            android:layout_width="wrap_content"
+	            android:layout_height="match_parent"
+	            android:layout_column="0"
+	            android:layout_gravity="bottom|right"
+	            android:layout_row="0"
+	            android:text="@string/cntV_enterTaskName"
+	            android:textAppearance="?android:attr/textAppearanceMedium" />
+	
+	        <EditText
+	            android:id="@+id/cnt_taskName"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_x="2dp"
+	            android:layout_y="18dp" >
+	
+	            <requestFocus />
+	        </EditText>
+	    </AbsoluteLayout>
+	
+	    <View
+	        android:id="@+id/line1"
+	        android:layout_width="wrap_content"
+	        android:layout_height="2dp"
+	        android:background="#33b5e5" />
+	
+	    <GridLayout
+	        android:id="@+id/cnt_grid"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" >
+	
+	        <CheckBox
+	            android:id="@+id/cnt_checkLocationChosen"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="0.00" />
+	
+	        <Button
+	            android:id="@+id/cnt_chooseLocationButton"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_column="1"
+	            android:layout_gravity="right"
+	            android:layout_row="0"
+	            android:text="@string/cntV_taskChooseLocation" />
+	    </GridLayout>
+	
+	    <View
+	        android:id="@+id/line2"
+	        android:layout_width="wrap_content"
+	        android:layout_height="2dp"
+	        android:background="#33b5e5" />
+	
+	    <AbsoluteLayout
+	        android:id="@+id/cnt_absolute_1"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content" >
+	
+	        <TextView
+	            android:id="@+id/textView2"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/cntV_taskDescription" />
+	
+	        <EditText
+	            android:id="@+id/cnt_taskDescription"
+	            android:layout_width="match_parent"
+	            android:layout_height="84dp"
+	            android:layout_y="16dp"
+	            android:inputType="textMultiLine" />
+	    </AbsoluteLayout>
+	
+	    <View
+	        android:id="@+id/line3"
+	        android:layout_width="wrap_content"
+	        android:layout_height="2dp"
+	        android:background="#33b5e5" />
+	
+	    <CheckBox
+	        android:id="@+id/cnt_checkBox_specify_days"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/cntV_taskDefineTimeRange" />
+	
+	    <View
+	        android:id="@+id/line4"
+	        android:layout_width="wrap_content"
+	        android:layout_height="2dp"
+	        android:background="#33b5e5" />
+	
+	    <AbsoluteLayout
+	        android:id="@+id/cnt_asboluteLayout_3"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" >
+	
+	        <TextView
+	            android:id="@+id/textView3"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_column="0"
+	            android:layout_row="0"
+	            android:layout_weight="0.00"
+	            android:text="@string/cntV_taskUrgency" />
+	
+	        <RatingBar
+	            android:id="@+id/cnt_setUrgency"
+	            android:layout_width="145dp"
+	            android:layout_height="wrap_content"
+	            android:layout_column="1"
+	            android:layout_gravity="bottom|right"
+	            android:layout_row="0"
+	            android:layout_weight="0.00"
+	            android:layout_x="144dp" />
+	    </AbsoluteLayout>
+	
+	    <View
+	        android:id="@+id/line5"
+	        android:layout_width="wrap_content"
+	        android:layout_height="2dp"
+	        android:background="#33b5e5" />
+	
+	    <Button
+	        android:id="@+id/cnt_specifyModeButton"
+	        android:layout_width="match_parent"
+	        android:layout_height="46dp"
+	        android:text="@string/cntV_taskspecifyReminderMode" />
+	
+	    <View
+	        android:id="@+id/line6"
+	        android:layout_width="wrap_content"
+	        android:layout_height="2dp"
+	        android:background="#33b5e5" />
+	
+	    <AbsoluteLayout
+	        android:id="@+id/cnt_grid_3"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content" >
+	
+	        <SeekBar
+	            android:id="@+id/cnt_specifyRangeSeekBar"
+	            android:layout_width="242dp"
+	            android:layout_height="wrap_content"
+	            android:layout_x="59dp"
+	            android:layout_y="19dp" />
+	
+	        <TextView
+	            android:id="@+id/cnt_range_count"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_x="13dp"
+	            android:layout_y="24dp"
+	            android:text="00.0"
+	            android:textAppearance="?android:attr/textAppearanceMedium" />
+	
+	        <TextView
+	            android:id="@+id/textView4"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_x="2dp"
+	            android:layout_y="2dp"
+	            android:text="@string/cntV_taskSpecifyRange"
+	            android:textAppearance="?android:attr/textAppearanceSmall" />
+	
+	    </AbsoluteLayout>
+		<View
+	        android:id="@+id/line7"
+	        android:layout_width="wrap_content"
+	        android:layout_height="2dp"
+	        android:background="#33b5e5" />
+	    
+		<GridLayout
+	        android:id="@+id/cnt_grid_2"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" >
+	
+	        <Button
+	            android:id="@+id/cnt_saveButton"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/save" />
+	
+	        <Button
+	            android:id="@+id/cnt_cancelButton"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/cancel" />
+	    </GridLayout>
+	
+	</LinearLayout>
+</ScrollView>
