--- a/res/layout/createnewtask.xml
+++ b/res/layout/createnewtask.xml
@@ -36,34 +36,8 @@
 	            <requestFocus />
 	        </EditText>
 	    </AbsoluteLayout>
-	
-	    <View
-	        android:id="@+id/line1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="2dp"
-	        android:background="#33b5e5" />
-	
-	    <GridLayout
-	        android:id="@+id/cnt_grid"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" >
-	
-	        <CheckBox
-	            android:id="@+id/cnt_checkLocationChosen"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_weight="0.00" />
-	
-	        <Button
-	            android:id="@+id/cnt_chooseLocationButton"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_column="1"
-	            android:layout_gravity="right"
-	            android:layout_row="0"
-	            android:text="@string/cntV_taskChooseLocation" />
-	    </GridLayout>
-	
+	    
+	    
 	    <View
 	        android:id="@+id/line2"
 	        android:layout_width="wrap_content"
@@ -82,24 +56,60 @@
 	            android:text="@string/cntV_taskDescription" />
 	
 	        <EditText
-	            android:id="@+id/cnt_taskDescription"
+	            android:id="@+id/cnt_taskDescriptionEditText"
 	            android:layout_width="match_parent"
 	            android:layout_height="84dp"
 	            android:layout_y="16dp"
 	            android:inputType="textMultiLine" />
 	    </AbsoluteLayout>
+	    	
+	    <View
+	        android:id="@+id/line1"
+	        android:layout_width="wrap_content"
+	        android:layout_height="2dp"
+	        android:background="#33b5e5" />
+
+	    <TextView
+	        android:id="@+id/textView5"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="0.00"
+	        android:text="@string/cntV_taskChooseLocation"
+	        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+	    <Button
+	        android:id="@+id/cnt_chooseLocationButton"
+	        android:layout_width="200dp"
+	        android:layout_height="wrap_content"
+	        android:text="@string/cntV_taskChooseLocationButtonText" />
+	
+	    <GridLayout
+	        android:id="@+id/cnt_grid"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" >
+	    </GridLayout>
+	
+
 	
 	    <View
 	        android:id="@+id/line3"
 	        android:layout_width="wrap_content"
 	        android:layout_height="2dp"
 	        android:background="#33b5e5" />
-	
-	    <CheckBox
-	        android:id="@+id/cnt_checkBox_specify_days"
-	        android:layout_width="match_parent"
+
+	    <TextView
+	        android:id="@+id/textView6"
+	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="@string/cntV_taskDefineTimeRange" />
+	        android:layout_weight="0.00"
+	        android:text="@string/cntV_taskDefineTimeRange"
+	        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+	    <Button
+	        android:id="@+id/cnt_chooseDaysButton"
+	        android:layout_width="200dp"
+	        android:layout_height="wrap_content"
+	        android:text="@string/cntV_taskDefineTimeRangeButtonText" />
 	
 	    <View
 	        android:id="@+id/line4"
