--- a/res/layout/listitem.xml
+++ b/res/layout/listitem.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/listItemPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_x="12dp"
