--- a/res/menu/listmenucompleted.xml
+++ b/res/menu/listmenucompleted.xml
@@ -7,6 +7,11 @@
     <!-- android:icon="@drawable/ic_new_game" -->
 
     <item
+        android:id="@+id/showTask"
+        android:title="@string/showTask"/>
+    <!-- android:icon="@drawable/ic_help" -->
+
+    <item
         android:id="@+id/editTask"
         android:title="@string/editTask"/>
     <!-- android:icon="@drawable/ic_help" -->
